# red-packet-2026

./: README.md
landing/: index.html  index.part2.html
part1/: Cargo.toml  _idea.txt  hb2026-part1.service
part1/src/: main.rs
part2/: Cargo.toml  _idea.txt  analyze.php  hb2026-part2.service  main.cf
part2/src/: main.rs
part3/: SnowBackground.psd  _idea.txt  cheers2002.psd  cheers2014.psd  cheers2026.psd  nginx.conf
part3/src/: index.php
writeup/: README.md
