[package]
name = "red-packet-2026-part2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
indymilter = "0.3"
bytes = "1.11"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
lazy_static = "1.5"
ipnetwork = "0.21"